[package]
name = "proven-applications"
version.workspace = true
edition = "2024"

[dependencies]
async-trait.workspace = true
bytes.workspace = true
chrono.workspace = true
ciborium.workspace = true
fastrand.workspace = true
futures.workspace = true
proven-bootable.workspace = true
proven-locks.workspace = true
proven-messaging.workspace = true
proven-util.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
proven-locks-memory.workspace = true
proven-messaging-memory.workspace = true
