[package]
name = "proven-applications"
version = "0.1.0"
edition = "2024"

[dependencies]
proven-engine = { path = "../engine" }
proven-util = { path = "../util" }
proven-transport = { path = "../transport" }
proven-topology = { path = "../topology" }
proven-storage = { path = "../storage" }

# Core dependencies
arc-swap.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
ciborium.workspace = true
tracing.workspace = true
bytes.workspace = true

# Stream processing
tokio-stream.workspace = true

[dev-dependencies]
futures.workspace = true
proven-engine = { path = "../engine" }
proven-network = { path = "../network" }
proven-storage-memory = { path = "../storage-memory" }
proven-topology-mock = { path = "../topology-mock" }
proven-transport-memory = { path = "../transport-memory" }
proven-attestation-mock = { path = "../attestation-mock" }
ed25519-dalek.workspace = true
rand.workspace = true
tracing-subscriber.workspace = true
