[package]
name = "proven-attestation-dev"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
ciborium = { workspace = true }
coset = { workspace = true }
derive_more = { workspace = true }
proven-attestation = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
