[package]
name = "proven-attestation-dev"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
ciborium = { workspace = true }
coset = { workspace = true }
proven-attestation = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
