[package]
name = "proven-attestation-mock"
version.workspace = true
edition = "2024"

[dependencies]
async-trait.workspace = true
bytes.workspace = true
nsm-nitro-enclave-utils.workspace = true
proven-attestation.workspace = true
rand.workspace = true
serde_bytes.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
