[package]
name = "proven-attestation-nsm"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
aws-nitro-enclaves-nsm-api = { workspace = true }
bytes = { workspace = true }
proven-attestation = { workspace = true }
serde_bytes = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
