[package]
name = "proven-attestation-nsm"
version.workspace = true
edition = "2024"

[dependencies]
async-trait.workspace = true
bytes.workspace = true
nsm-nitro-enclave-utils.workspace = true
proven-attestation.workspace = true
serde_bytes.workspace = true
thiserror.workspace = true
tokio.workspace = true
