[package]
name = "proven-bitcoin-core"
version.workspace = true
edition = "2024"

[dependencies]
async-trait.workspace = true
proven-bootable.workspace = true
proven-isolation.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
tempfile.workspace = true
tracing-subscriber.workspace = true 
