[package]
name = "proven-cert-store"
version.workspace = true
edition = "2024"

[dependencies]
async-trait.workspace = true
base64.workspace = true
bytes.workspace = true
ciborium.workspace = true
proven-store.workspace = true
ring.workspace = true
thiserror.workspace = true
tokio-rustls-acme.workspace = true
