[package]
name = "proven-code-package"
version.workspace = true
edition = "2024"

[dependencies]
async-trait.workspace = true
bytes.workspace = true
ciborium.workspace = true
deno_ast.workspace = true
deno_core.workspace = true
deno_error.workspace = true
deno_graph.workspace = true
deno_npm.workspace = true
deno_semver.workspace = true
eszip.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
