[package]
name = "proven-consensus"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core async and concurrency
async-trait.workspace = true
futures.workspace = true
tokio.workspace = true

# Serialization and data handling
serde.workspace = true
serde_json.workspace = true
ciborium.workspace = true
bytes.workspace = true
base64.workspace = true

# Networking and HTTP
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio-tungstenite = "0.23"

# Cryptography and security
ed25519-dalek.workspace = true
coset.workspace = true
hex.workspace = true

# Consensus and Raft
openraft.workspace = true
rocksdb.workspace = true
byteorder.workspace = true
maplit.workspace = true

# Utilities
uuid.workspace = true
url.workspace = true
tracing.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
rand = "0.8"

# Proven dependencies
proven-attestation.workspace = true
proven-bootable.workspace = true
proven-governance.workspace = true

[dev-dependencies]
proven-attestation-mock.workspace = true
proven-governance-mock.workspace = true
proven-util.workspace = true
rand = "0.8" 
serial_test = "3.0"
tempfile = "3.0"
tracing-test = "0.2"
