[package]
name = "proven-consensus"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core async and concurrency
async-trait.workspace = true
futures.workspace = true
tokio.workspace = true

# Serialization and data handling
serde.workspace = true
serde_json.workspace = true
ciborium.workspace = true
bytes.workspace = true
base64.workspace = true

# Networking and HTTP
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio-tungstenite.workspace = true

# Cryptography and security
ed25519-dalek.workspace = true
coset.workspace = true
hex.workspace = true

# Consensus and Raft
openraft.workspace = true
rocksdb.workspace = true
byteorder.workspace = true
maplit.workspace = true

# Utilities
uuid.workspace = true
url.workspace = true
tracing.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
rand.workspace = true

# Proven dependencies
proven-attestation.workspace = true
proven-bootable.workspace = true
proven-governance.workspace = true
proven-vsock-rpc = { workspace = true, optional = true }
sha2.workspace = true
chrono.workspace = true

# Monitoring
prometheus = "0.13"
lazy_static = "1.4"

# Compression
flate2 = "1.0"

# S3 and cloud storage dependencies (optional)
aws-config = { version = "1.1", optional = true }
aws-sdk-s3 = { version = "1.5", optional = true }
aws-types = { version = "1.1", optional = true }

# Encryption and security for S3
aes-gcm = { version = "0.10", optional = true }
miniz_oxide = { version = "0.7", optional = true }

# Additional utilities for S3
lru = { version = "0.12", optional = true }
crossbeam = { version = "0.8", optional = true }
crc32fast = { version = "1.3", optional = true }
# ciborium is already in workspace dependencies

[features]
default = ["s3"]
s3 = [
    "dep:aws-config",
    "dep:aws-sdk-s3", 
    "dep:aws-types",
    "dep:aes-gcm",
    "dep:miniz_oxide",
    "dep:lru",
    "dep:crossbeam",
    "dep:crc32fast",
    "dep:proven-vsock-rpc"
]
test-helpers = [
    "dep:proven-attestation-mock", 
    "dep:proven-governance-mock", 
    "dep:proven-util", 
    "dep:tempfile"
]

[dependencies.proven-attestation-mock]
workspace = true
optional = true

[dependencies.proven-governance-mock]
workspace = true
optional = true

[dependencies.proven-util]
workspace = true
optional = true

[dependencies.tempfile]
workspace = true
optional = true

[dev-dependencies]
proven-attestation-mock.workspace = true
proven-governance-mock.workspace = true
proven-util.workspace = true
tempfile.workspace = true
tracing-subscriber.workspace = true
tracing-test.workspace = true
serde_yaml = "0.9"
