[package]
name = "proven-core"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true }
axum_typed_multipart = { workspace = true }
bytes = { workspace = true }
coset = { workspace = true }
derive_more = { workspace = true }
ed25519-dalek = { workspace = true }
futures = { workspace = true }
headers = { workspace = true }
hex = { workspace = true }
http-body-util = { workspace = true }
proven-attestation = { workspace = true }
proven-http = { workspace = true }
proven-radix-rola = { workspace = true }
proven-runtime = { workspace = true }
proven-sessions = { workspace = true }
proven-store = { workspace = true }
radix-common = { workspace = true }
rand = { workspace = true }
ring = { workspace = true }
serde = { workspace = true }
serde_cbor = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
