[package]
name = "proven-core"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true }
axum_typed_multipart = { workspace = true }
bytes = { workspace = true }
ciborium = { workspace = true }
coset = { workspace = true }
ed25519-dalek = { workspace = true }
futures = { workspace = true }
headers = { workspace = true }
hex = { workspace = true }
http-body-util = { workspace = true }
proven-applications = { workspace = true }
proven-attestation = { workspace = true }
proven-code-package = { workspace = true }
proven-http = { workspace = true }
proven-radix-rola = { workspace = true }
proven-runtime = { workspace = true }
proven-sessions = { workspace = true }
proven-sql = { workspace = true }
proven-store = { workspace = true }
radix-common = { workspace = true }
rand = { workspace = true }
ring = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

[lints.rust]
long_running_const_eval = "allow"
