[package]
name = "proven-enclave"
version = "0.1.0"
edition = "2021"
rust-version = "1.79"

[dependencies]
tokio = { version = "1.36.0", features = [
  "io-util",
  "macros",
  "process",
  "rt",
  "rt-multi-thread",
] }

[target.'cfg(target_os = "linux")'.dependencies]
async-nats = "0.36.0"
cidr = "0.2.3"
derive_more = { version = "1.0.0", features = ["from"] }
proven-attestation = { path = "../attestation" }
proven-attestation-nsm = { path = "../attestation-nsm" }
proven-core = { path = "../core" }
proven-dnscrypt-proxy = { path = "../dnscrypt-proxy" }
proven-external-fs = { path = "../external-fs" }
proven-http-letsencrypt = { path = "../http-letsencrypt" }
proven-imds = { path = "../imds" }
proven-instance-details = { path = "../instance-details" }
proven-kms = { path = "../kms" }
proven-nats-monitor = { path = "../nats-monitor" }
proven-nats-server = { path = "../nats-server" }
proven-postgres = { path = "../postgres" }
proven-radix-aggregator = { path = "../radix-aggregator" }
proven-radix-gateway = { path = "../radix-gateway" }
proven-radix-node = { path = "../radix-node" }
proven-sessions = { path = "../sessions" }
proven-store = { path = "../store" }
proven-store-asm = { path = "../store-asm" }
proven-store-nats = { path = "../store-nats" }
proven-vsock-proxy = { path = "../vsock-proxy" }
proven-vsock-rpc = { path = "../vsock-rpc" }
proven-vsock-tracing = { path = "../vsock-tracing" }
radix-common = "1.2.0"
rand = "0.8.5"
rtnetlink = "0.14.1"
tokio-util = { version = "0.7.12", features = ["rt"] }
tokio-vsock = "0.5.0"
tracing = "0.1.40"
tracing-panic = "0.1.2"
tracing-subscriber = "0.3.18"
