[package]
name = "proven-enclave"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
async-nats = { workspace = true }
bytes = { workspace = true }
cidr = { workspace = true }
derive_more = { workspace = true }
fdlimit = { workspace = true }
proven-attestation = { workspace = true }
proven-attestation-nsm = { workspace = true }
proven-core = { workspace = true }
proven-dnscrypt-proxy = { workspace = true }
proven-external-fs = { workspace = true }
proven-http-letsencrypt = { workspace = true }
proven-imds = { workspace = true }
proven-instance-details = { workspace = true }
proven-kms = { workspace = true }
proven-nats-monitor = { workspace = true }
proven-nats-server = { workspace = true }
proven-postgres = { workspace = true }
proven-radix-aggregator = { workspace = true }
proven-radix-gateway = { workspace = true }
proven-radix-node = { workspace = true }
proven-sessions = { workspace = true }
proven-store = { workspace = true }
proven-store-asm = { workspace = true }
proven-store-nats = { workspace = true }
proven-store-s3 = { workspace = true }
proven-vsock-proxy = { workspace = true }
proven-vsock-rpc = { workspace = true }
proven-vsock-tracing = { workspace = true }
radix-common = { workspace = true }
rand = { workspace = true }
rlimit = { workspace = true }
rtnetlink = { workspace = true }
tokio-util = { workspace = true }
tokio-vsock = { workspace = true }
tracing = { workspace = true }
tracing-panic = { workspace = true }
tracing-subscriber = { workspace = true }

[lints.rust]
long_running_const_eval = "allow"
