[package]
name = "proven-enclave"
version.workspace = true
edition = "2024"

[dependencies]
async-trait.workspace = true
axum.workspace = true
bytes.workspace = true
ciborium.workspace = true
cidr.workspace = true
ed25519-dalek.workspace = true
fdlimit.workspace = true
futures.workspace = true
hex.workspace = true
http.workspace = true
proven-applications.workspace = true
proven-attestation.workspace = true
proven-attestation-nsm.workspace = true
proven-bootable.workspace = true
proven-cert-store.workspace = true
proven-engine.workspace = true
proven-core.workspace = true
proven-dnscrypt-proxy.workspace = true
proven-external-fs.workspace = true
proven-topology.workspace = true
proven-topology-mock.workspace = true
proven-http-letsencrypt.workspace = true
proven-identity.workspace = true
proven-imds.workspace = true
proven-passkeys.workspace = true
proven-sessions.workspace = true
proven-instance-details.workspace = true
proven-kms.workspace = true
proven-logger.workspace = true
proven-logger-vsock.workspace = true
proven-locks-memory.workspace = true
proven-messaging.workspace = true
proven-messaging-memory.workspace = true
proven-network.workspace = true
proven-postgres.workspace = true
proven-radix-aggregator.workspace = true
proven-radix-gateway.workspace = true
proven-radix-nft-verifier-gateway.workspace = true
proven-radix-node.workspace = true
proven-runtime.workspace = true
proven-sql.workspace = true
proven-sql-streamed.workspace = true
proven-store.workspace = true
proven-store-asm.workspace = true
proven-store-memory.workspace = true
proven-store-s3.workspace = true
proven-storage.workspace = true
proven-storage-memory.workspace = true
proven-transport.workspace = true
proven-transport-ws.workspace = true
proven-vsock-proxy.workspace = true
proven-vsock-rpc.workspace = true
proven-vsock-cac.workspace = true
radix-common.workspace = true
rand.workspace = true
rlimit.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tokio-vsock.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-panic.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
rtnetlink.workspace = true

[lints.rust]
long_running_const_eval = "allow"
